<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6092E3"
        android:shrinkColumns="1,2,3"
        android:stretchColumns="1,2,3"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/currentQTxtView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_column="0"
                android:layout_span="1"
                android:layout_weight="3"
                android:includeFontPadding="true"
                android:paddingVertical="100dp"
                android:text="@string/currentQTxtView"
                android:textAlignment="center"
                android:textColor="#FAFAFA"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTerm1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#2A4F8C"
                android:paddingVertical="15dp"
                android:text="@string/btnTerm1"
                android:textSize="25sp"
                app:cornerRadius="40dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTerm2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#2A4F8C"
                android:paddingVertical="15dp"
                android:text="@string/btnTerm2"
                android:textSize="25sp"
                app:cornerRadius="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTerm3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#2A4F8C"
                android:paddingVertical="15dp"
                android:text="@string/btnTerm3"
                android:textSize="25sp"
                app:cornerRadius="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTerm4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2A4F8C"
                android:paddingVertical="15dp"
                android:text="@string/btnTerm4"
                android:textSize="25sp"
                app:cornerRadius="40dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#D1064B"
                android:paddingVertical="15dp"
                android:text="@string/btnNext"
                android:textSize="25sp"
                app:cornerRadius="45dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>